# lyrics-generator

./: .gitignore  LICENSE  README.md  config.example.json  config.schema.json  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
Lyrics/Birdbrain/: lyric.json
Lyrics/Machine Love/: lyric.json
src/: __init__.py  ass_writer.py  cli.py  config.py  generator.py  model.py  parser.py  romanize.py
